kubernetes/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    goldilocks.fairwinds.com/enabled: "true"
